--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
   },
   "type": "module",
   "scripts": {
-    "server": “nodemon server.js"
-  },
+    "server": "nodemon server.js"
+  }
 }
