Update server tree

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "type": "module",
   "scripts": {
-    "server": "nodemon server.js"
+    "seed": "nodemon src/seed/seeder.js",
+    "server": "nodemon src/server.js"
   }
 }
