--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
     "src/**/*.js": [
       "eslint --fix",
       "prettier --write"
+    ],
+    "server/src/**/*.js": [
+      "eslint --fix",
+      "prettier --write"
     ]
   }
 }
