Fix seed task bug in package.json

--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,7 @@
     "routes": "run-script-os",
     "routes:win32": "set SHOW_ROUTES=true && nodemon src/server.js --exec babel-node --trace-warnings",
     "routes:default": "SHOW_ROUTES=true nodemon src/server.js --exec babel-node --trace-warnings",
-    "seed": "node src/seed/seeder.js --exec babel-node",
+    "seed": "nodemon src/seed/seeder.js --exec babel-node",
     "server": "nodemon src/server.js --exec babel-node"
   },
   "devDependencies": {
