--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.11.12",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7"
   },
   "scripts": {
