--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mmmagic": "^0.5.3",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.12",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7"
   },
   "scripts": {
