--- a/server/package.json
+++ b/server/package.json
@@ -19,13 +19,14 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "routes": "run-script-os",
     "routes:win32": "set SHOW_ROUTES=true && nodemon src/server.js --exec babel-node --trace-warnings",
     "routes:default": "SHOW_ROUTES=true nodemon src/server.js --exec babel-node --trace-warnings",
-    "seed": "nodemon src/seed/seeder.js --exec babel-node",
+    "seed": "rm -rf public/postImg/* public/avatars/IMG_* && nodemon src/seed/seeder.js --exec babel-node",
     "server": "nodemon src/server.js --exec babel-node"
   },
   "devDependencies": {
