--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@ server/public/
 .vscode/
 
 # dependencies
-**/node_modules
-**/yarn.lock
+node_modules
+package-lock.json
+yarn.lock
 /.pnp
 .pnp.js
 
