--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv-defaults": "^2.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-avatar-editor": "^11.1.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
