--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "heroku-postbuild": "cd server && yarn build",
+    "heroku-prebuild": "cd server && yarn",
+    "heroku-postbuild": "cd server && yarn server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
