--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-server/public/
-.env
-.eslintcache
+backend/public/
+**/.env
+**/.eslintcache
 .vscode/
 
 # dependencies
-node_modules
-package-lock.json
-yarn.lock
+**/node_modules
+**/package-lock.json
+**/yarn.lock
 /.pnp
 .pnp.js
 
