--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "heroku-prebuild": "cd server && yarn",
     "heroku-postbuild": "cd server && yarn server",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
