--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/preset-env": "^7.12.11"
   },
   "scripts": {
     "routes": "run-script-os",
@@ -29,10 +33,6 @@
     "server": "nodemon src/server.js --exec babel-node --trace-warnings"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "express-list-endpoints": "^5.0.0",
