--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "winnifoto",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "start-frontend": "cd frontend && yarn start",
-    "heroku-prebuild": "cd backend && yarn && yarn seed",
-    "build": "cd backend && yarn server",
+    "heroku-prebuild": "cd backend && yarn",
+    "build": "cd backend && yarn seed",
     "build-frontend": "cd frontend && yarn build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
